# preparcial-testing-tienda

./: .env.test  Dockerfile  Dockerfile.test  docker-compose.test.yml  pyproject.toml
src/carrito/: api.py
src/database/: config.py  models.py  repositorio.py
tests/: conftest.py
tests/e2e/: test_frontend.py
tests/integration/: test_api_integracion.py  test_repositorio_db.py
tests/system/: test_sistema_e2e.py
