[project]
name = "preparcial-testing-tienda"
version = "0.1.0"
description = "TiendaUV - Carrito de Compras con pruebas de integracion, sistema y E2E"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgres]>=4.0.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]